Got the header blurb to align correctly. Still could probably use some changes as it is limited eventually by page size. Also did a first round on my about me page and put in link to it.

--- a/styles.css
+++ b/styles.css
@@ -29,17 +29,17 @@ body {
   z-index: 1;
 }
 .navbar {
-    /* background-color: #333; */
     overflow: hidden;
     display: flex;
     justify-content: space-around;
-    border: solid red 1px;
+    /* border: solid red 1px; */
     padding: 8px 0;
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.25), rgba(0,0,0,0));
 }
 .navbar img{
   width: 200px;
   height: auto;
-  border: solid red 1px;
+  /* border: solid red 1px; */
 }
 .navbar a {
     float: left;
@@ -49,11 +49,20 @@ body {
     align-content: center;
     padding: 14px 16px;
     text-decoration: none;
-    border: solid red 1px;
+    /* border: solid red 1px; */
 }
 .navbar a:hover {
     background-color: #ddd;
     color: black;
+}
+.header-blurb {
+  position: absolute;
+  bottom: 35%;
+  left: 0;
+  width: 100%;
+  color: #F5F5F5;
+  text-align: center;
+  padding: 20px;
 }
 /* Image Gallery Styles */
 .image-gallery {
@@ -112,3 +121,43 @@ body {
       flex-direction: row;
     }
   }
+
+
+  /* About Me page */
+.aboutme {
+  border: solid red 1px;
+  background-color: #F5F5F5;
+}
+.aboutme h2{
+  padding: 20px 10px;
+}
+
+
+.container1, .container2, .container3 {
+  display: flex;
+  border: solid red 1px;
+  padding: px;
+  gap: 15px;
+}
+.container1, .container2, .container3 p{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  font-size: large;
+  line-height: 1.3;
+}
+.container2{
+  flex-direction: row-reverse;
+}
+
+.container1 img {
+  max-width: 50%;
+}
+.container2 img {
+  max-width: 50%;
+}
+.container3 img {
+  max-width: 50%;
+}
+
+
